@@ -1,20 +1,24 @@
 /*
- * Copyright 2004-2014 H2 Group. Multiple-Licensed under the MPL 2.0,
- * and the EPL 1.0 (http://h2database.com/html/license.html).
+ * Copyright 2004-2020 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * and the EPL 1.0 (https://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
 package org.h2.engine;
 
 import java.io.IOException;
 import java.net.Socket;
+import java.sql.SQLException;
 import java.util.ArrayList;
+
 import org.h2.api.DatabaseEventListener;
 import org.h2.api.ErrorCode;
 import org.h2.api.JavaObjectSerializer;
 import org.h2.command.CommandInterface;
 import org.h2.command.CommandRemote;
 import org.h2.command.dml.SetTypes;
-import org.h2.jdbc.JdbcSQLException;
+import org.h2.engine.Mode.ModeEnum;
+import org.h2.expression.ParameterInterface;
+import org.h2.jdbc.JdbcException;
 import org.h2.message.DbException;
 import org.h2.message.Trace;
 import org.h2.message.TraceSystem;
@@ -24,16 +28,22 @@ import org.h2.store.FileStore;
 import org.h2.store.LobStorageFrontend;
 import org.h2.store.LobStorageInterface;
 import org.h2.store.fs.FileUtils;
+import org.h2.util.DateTimeUtils;
 import org.h2.util.JdbcUtils;
 import org.h2.util.MathUtils;
 import org.h2.util.NetUtils;
-import org.h2.util.New;
+import org.h2.util.NetworkConnectionInfo;
 import org.h2.util.SmallLRUCache;
 import org.h2.util.StringUtils;
 import org.h2.util.TempFileDeleter;
+import org.h2.util.TimeZoneProvider;
+import org.h2.util.Utils;
 import org.h2.value.CompareMode;
 import org.h2.value.Transfer;
 import org.h2.value.Value;
+import org.h2.value.ValueInt;
+import org.h2.value.ValueString;
+import org.h2.value.ValueTimestampTimeZone;
 
 /**
  * The client side part of a session when using the server mode. This object
@@ -73,10 +83,9 @@ public class SessionRemote extends SessionWithState implements DataHandler {
     //此时由org.h2.engine.Session得到traceSystem
     private TraceSystem traceSystem;
     private Trace trace;
-    private ArrayList<Transfer> transferList = New.arrayList();
+    private ArrayList<Transfer> transferList = Utils.newSmallArrayList();
     private int nextId;
     private boolean autoCommit = true; //集群环境上这个参数其实没意义
-    private CommandInterface autoCommitFalse, autoCommitTrue;
     private ConnectionInfo connectionInfo;
     private String databaseName;
     private String cipher;
@@ -95,7 +104,11 @@ public class SessionRemote extends SessionWithState implements DataHandler {
     private JavaObjectSerializer javaObjectSerializer;
     private volatile boolean javaObjectSerializerInitialized;
 
-    private CompareMode compareMode = CompareMode.getInstance(null, 0);
+    private final CompareMode compareMode = CompareMode.getInstance(null, 0);
+
+    private String currentSchemaName;
+
+    private volatile DynamicSettings dynamicSettings;
 
     public SessionRemote(ConnectionInfo ci) {
         this.connectionInfo = ci;
@@ -103,9 +116,8 @@ public class SessionRemote extends SessionWithState implements DataHandler {
 
     @Override
     public ArrayList<String> getClusterServers() {
-        ArrayList<String> serverList = new ArrayList<String>();
-        for (int i = 0; i < transferList.size(); i++) {
-            Transfer transfer = transferList.get(i);
+        ArrayList<String> serverList = new ArrayList<>();
+        for (Transfer transfer : transferList) {
             serverList.add(transfer.getSocket().getInetAddress().
                     getHostAddress() + ":" +
                     transfer.getSocket().getPort());
@@ -116,13 +128,12 @@ public class SessionRemote extends SessionWithState implements DataHandler {
     private Transfer initTransfer(ConnectionInfo ci, String db, String server)
             throws IOException {
         Socket socket = NetUtils.createSocket(server,
-                Constants.DEFAULT_TCP_PORT, ci.isSSL());
-        Transfer trans = new Transfer(this);
-        trans.setSocket(socket);
+                Constants.DEFAULT_TCP_PORT, ci.isSSL(), ci.getProperty("NETWORK_TIMEOUT",0 ));
+        Transfer trans = new Transfer(this, socket);
         trans.setSSL(ci.isSSL());
         trans.init();
-        trans.writeInt(Constants.TCP_PROTOCOL_VERSION_6);
-        trans.writeInt(Constants.TCP_PROTOCOL_VERSION_16);
+        trans.writeInt(Constants.TCP_PROTOCOL_VERSION_MIN_SUPPORTED);
+        trans.writeInt(Constants.TCP_PROTOCOL_VERSION_MAX_SUPPORTED);
         trans.writeString(db);
         trans.writeString(ci.getOriginalURL());
         trans.writeString(ci.getUserName());
@@ -214,7 +225,7 @@ public class SessionRemote extends SessionWithState implements DataHandler {
             CommandInterface c = prepareCommand(
                     "SET CLUSTER " + serverList, Integer.MAX_VALUE);
             // this will set autoCommit to false
-            c.executeUpdate();
+            c.executeUpdate(null);
             // so we need to switch it on
             autoCommit = true;
             cluster = true;
@@ -253,31 +264,15 @@ public class SessionRemote extends SessionWithState implements DataHandler {
     // VERSION_8开始通过SESSION_SET_AUTOCOMMIT协议指令，以前的版本通过SET AUTOCOMMIT语句
     // 对于commit和rollback则没有对应的协议指令，只能通过COMMIT、ROLLBACK语句
     private synchronized void setAutoCommitSend(boolean autoCommit) {
-        if (clientVersion >= Constants.TCP_PROTOCOL_VERSION_8) {
-            for (int i = 0, count = 0; i < transferList.size(); i++) {
-                Transfer transfer = transferList.get(i);
-                try {
-                    traceOperation("SESSION_SET_AUTOCOMMIT", autoCommit ? 1 : 0);
-                    transfer.writeInt(SessionRemote.SESSION_SET_AUTOCOMMIT).
-                            writeBoolean(autoCommit);
-                    done(transfer);
-                } catch (IOException e) {
-                    removeServer(e, i--, ++count);
-                }
-            }
-        } else {
-            if (autoCommit) {
-                if (autoCommitTrue == null) {
-                    autoCommitTrue = prepareCommand(
-                            "SET AUTOCOMMIT TRUE", Integer.MAX_VALUE);
-                }
-                autoCommitTrue.executeUpdate();
-            } else {
-                if (autoCommitFalse == null) {
-                    autoCommitFalse = prepareCommand(
-                            "SET AUTOCOMMIT FALSE", Integer.MAX_VALUE);
-                }
-                autoCommitFalse.executeUpdate();
+        for (int i = 0, count = 0; i < transferList.size(); i++) {
+            Transfer transfer = transferList.get(i);
+            try {
+                traceOperation("SESSION_SET_AUTOCOMMIT", autoCommit ? 1 : 0);
+                transfer.writeInt(SessionRemote.SESSION_SET_AUTOCOMMIT).
+                        writeBoolean(autoCommit);
+                done(transfer);
+            } catch (IOException e) {
+                removeServer(e, i--, ++count);
             }
         }
     }
@@ -343,8 +338,7 @@ public class SessionRemote extends SessionWithState implements DataHandler {
         //下面的代码是用于嵌入式或内存数据库的场景
         // create the session using reflection,
         // so that the JDBC layer can be compiled without it
-        boolean autoServerMode = Boolean.parseBoolean(
-                ci.getProperty("AUTO_SERVER", "false"));
+        boolean autoServerMode = ci.getProperty("AUTO_SERVER", false);
         ConnectionInfo backup = null;
         try {
             if (autoServerMode) {
@@ -363,8 +357,7 @@ public class SessionRemote extends SessionWithState implements DataHandler {
             DbException e = DbException.convert(re);
             if (e.getErrorCode() == ErrorCode.DATABASE_ALREADY_OPEN_1) {
                 if (autoServerMode) {
-                    String serverKey = ((JdbcSQLException) e.getSQLException()).
-                            getSQL();
+                    String serverKey = ((JdbcException) e.getSQLException()).getSQL();
                     if (serverKey != null) {
                         backup.setServerKey(serverKey);
                         // OPEN_NEW must be removed now, otherwise
@@ -407,7 +400,8 @@ public class SessionRemote extends SessionWithState implements DataHandler {
                 traceSystem.setLevelFile(level);
                 if (level > 0 && level < 4) {
                 	//如: E:/H2/eclipse-workspace-client/trace.db/mydb.1647ee04bd9fa205.0.trace.db
-                    String file = FileUtils.createTempFile(prefix, Constants.SUFFIX_TRACE_FILE, false, false);
+                    String file = FileUtils.createTempFile(prefix,
+                            Constants.SUFFIX_TRACE_FILE, false);
                     traceSystem.setFileName(file);
                 }
             } catch (IOException e) {
@@ -426,11 +420,9 @@ public class SessionRemote extends SessionWithState implements DataHandler {
             serverList = StringUtils.quoteStringSQL(server);
             ci.setProperty("CLUSTER", Constants.CLUSTERING_ENABLED);
         }
-        autoReconnect = Boolean.parseBoolean(ci.getProperty(
-                "AUTO_RECONNECT", "false"));
+        autoReconnect = ci.getProperty("AUTO_RECONNECT", false);
         // AUTO_SERVER implies AUTO_RECONNECT
-        boolean autoServer = Boolean.parseBoolean(ci.getProperty(
-                "AUTO_SERVER", "false"));
+        boolean autoServer = ci.getProperty("AUTO_SERVER", false);
         if (autoServer && serverList != null) {
             throw DbException
                     .getUnsupportedException("autoServer && serverList != null");
@@ -444,7 +436,7 @@ public class SessionRemote extends SessionWithState implements DataHandler {
                 	//在server端还会重新new出实例
                 	//这里的实例只是在client端用
                     eventListener = (DatabaseEventListener) JdbcUtils
-                            .loadUserClass(className).newInstance();
+                            .loadUserClass(className).getDeclaredConstructor().newInstance();
                 } catch (Throwable e) {
                     throw DbException.convert(e);
                 }
@@ -463,8 +455,7 @@ public class SessionRemote extends SessionWithState implements DataHandler {
         // TODO cluster: support more than 2 connections
         boolean switchOffCluster = false;
         try {
-            for (int i = 0; i < len; i++) {
-                String s = servers[i];
+            for (String s : servers) {
                 try {
                     Transfer trans = initTransfer(ci, databaseName, s);
                     transferList.add(trans);
@@ -490,7 +481,7 @@ public class SessionRemote extends SessionWithState implements DataHandler {
 
     private void switchOffCluster() {
         CommandInterface ci = prepareCommand("SET CLUSTER ''", Integer.MAX_VALUE);
-        ci.executeUpdate();
+        ci.executeUpdate(null);
     }
 
     /**
@@ -504,7 +495,7 @@ public class SessionRemote extends SessionWithState implements DataHandler {
     public void removeServer(IOException e, int i, int count) {
         trace.error(e, "removing server because of exception");
         transferList.remove(i);
-        if (transferList.size() == 0 && autoReconnect(count)) {
+        if (transferList.isEmpty() && autoReconnect(count)) {
             return;
         }
         checkClosed();
@@ -649,18 +640,18 @@ public class SessionRemote extends SessionWithState implements DataHandler {
             String sql = transfer.readString();
             int errorCode = transfer.readInt();
             String stackTrace = transfer.readString();
-            JdbcSQLException s = new JdbcSQLException(message, sql, sqlstate,
-                    errorCode, null, stackTrace);
+            SQLException s = DbException.getJdbcSQLException(message, sql, sqlstate, errorCode, null, stackTrace);
             if (errorCode == ErrorCode.CONNECTION_BROKEN_1) {
                 // allow re-connect
-                IOException e = new IOException(s.toString(), s);
-                throw e;
+                throw new IOException(s.toString(), s);
             }
             throw DbException.convert(s);
         } else if (status == STATUS_CLOSED) {
             transferList = null;
         } else if (status == STATUS_OK_STATE_CHANGED) {
             sessionStateChanged = true;
+            currentSchemaName = null;
+            dynamicSettings = null;
         } else if (status == STATUS_OK) {
             // ok
         } else {
@@ -680,7 +671,7 @@ public class SessionRemote extends SessionWithState implements DataHandler {
 
     @Override
     public boolean isClosed() {
-        return transferList == null || transferList.size() == 0;
+        return transferList == null || transferList.isEmpty();
     }
 
     /**
@@ -769,21 +760,6 @@ public class SessionRemote extends SessionWithState implements DataHandler {
     }
 
     @Override
-    public boolean isReconnectNeeded(boolean write) {
-        return false;
-    }
-
-    @Override
-    public SessionInterface reconnect(boolean write) {
-        return this;
-    }
-
-    @Override
-    public void afterWriting() {
-        // nothing to do
-    }
-
-    @Override
     public LobStorageInterface getLobStorage() {
         if (lobStorage == null) {
             lobStorage = new LobStorageFrontend(this);
@@ -840,7 +816,7 @@ public class SessionRemote extends SessionWithState implements DataHandler {
                 if (!serializerFQN.isEmpty() && !serializerFQN.equals("null")) {
                     try {
                         javaObjectSerializer = (JavaObjectSerializer) JdbcUtils
-                                .loadUserClass(serializerFQN).newInstance();
+                                .loadUserClass(serializerFQN).getDeclaredConstructor().newInstance();
                     } catch (Exception e) {
                         throw DbException.convert(e);
                     }
@@ -858,7 +834,7 @@ public class SessionRemote extends SessionWithState implements DataHandler {
     private String readSerializationSettings() {
         String javaObjectSerializerFQN = null;
         CommandInterface ci = prepareCommand(
-                "SELECT VALUE FROM INFORMATION_SCHEMA.SETTINGS "+
+                "SELECT `VALUE` FROM INFORMATION_SCHEMA.SETTINGS "+
                 " WHERE NAME='JAVA_OBJECT_SERIALIZER'", Integer.MAX_VALUE);
         try {
             ResultInterface result = ci.executeQuery(0, false);
@@ -889,11 +865,158 @@ public class SessionRemote extends SessionWithState implements DataHandler {
 
     @Override
     public String getCurrentSchemaName() {
-        throw DbException.getUnsupportedException("getSchema && remote session");
+        String schema = currentSchemaName;
+        if (schema == null) {
+            synchronized (this) {
+                try (CommandInterface command = prepareCommand("CALL SCHEMA()", 1);
+                        ResultInterface result = command.executeQuery(1, false)) {
+                    result.next();
+                    currentSchemaName = schema = result.currentRow()[0].getString();
+                }
+            }
+        }
+        return schema;
     }
 
     @Override
-    public void setCurrentSchemaName(String schema) {
-        throw DbException.getUnsupportedException("setSchema && remote session");
+    public synchronized void setCurrentSchemaName(String schema) {
+        currentSchemaName = null;
+        try (CommandInterface command = prepareCommand(
+                StringUtils.quoteIdentifier(new StringBuilder("SET SCHEMA "), schema).toString(), 0)) {
+            command.executeUpdate(null);
+            currentSchemaName = schema;
+        }
     }
+
+    @Override
+    public boolean isSupportsGeneratedKeys() {
+        return getClientVersion() >= Constants.TCP_PROTOCOL_VERSION_17;
+    }
+
+    @Override
+    public void setNetworkConnectionInfo(NetworkConnectionInfo networkConnectionInfo) {
+        // Not supported
+    }
+
+    @Override
+    public IsolationLevel getIsolationLevel() {
+        if (getClientVersion() >= Constants.TCP_PROTOCOL_VERSION_19) {
+            try (CommandInterface command = prepareCommand(
+                    "SELECT ISOLATION_LEVEL FROM INFORMATION_SCHEMA.SESSIONS WHERE ID = SESSION_ID()", 1);
+                    ResultInterface result = command.executeQuery(1, false)) {
+                result.next();
+                return IsolationLevel.fromSql(result.currentRow()[0].getString());
+            }
+        } else {
+            try (CommandInterface command = prepareCommand("CALL LOCK_MODE()", 1);
+                    ResultInterface result = command.executeQuery(1, false)) {
+                result.next();
+                return IsolationLevel.fromLockMode(result.currentRow()[0].getInt());
+            }
+        }
+    }
+
+    @Override
+    public void setIsolationLevel(IsolationLevel isolationLevel) {
+        if (getClientVersion() >= Constants.TCP_PROTOCOL_VERSION_19) {
+            try (CommandInterface command = prepareCommand(
+                    "SET SESSION CHARACTERISTICS AS TRANSACTION ISOLATION LEVEL " + isolationLevel.getSQL(), 0)) {
+                command.executeUpdate(null);
+            }
+        } else {
+            try (CommandInterface command = prepareCommand("SET LOCK_MODE ?", 0)) {
+                command.getParameters().get(0).setValue(ValueInt.get(isolationLevel.getLockMode()), false);
+                command.executeUpdate(null);
+            }
+        }
+    }
+
+    @Override
+    public StaticSettings getStaticSettings() {
+        StaticSettings settings = staticSettings;
+        if (settings == null) {
+            boolean databaseToUpper = true, databaseToLower = false, caseInsensitiveIdentifiers = false;
+            try (CommandInterface command = prepareCommand(
+                    "SELECT NAME, `VALUE` FROM INFORMATION_SCHEMA.SETTINGS WHERE NAME IN (?, ?, ?)",
+                    Integer.MAX_VALUE)) {
+                ArrayList<? extends ParameterInterface> parameters = command.getParameters();
+                parameters.get(0).setValue(ValueString.get("DATABASE_TO_UPPER"), false);
+                parameters.get(1).setValue(ValueString.get("DATABASE_TO_LOWER"), false);
+                parameters.get(2).setValue(ValueString.get("CASE_INSENSITIVE_IDENTIFIERS"), false);
+                try (ResultInterface result = command.executeQuery(Integer.MAX_VALUE, false)) {
+                    while (result.next()) {
+                        Value[] row = result.currentRow();
+                        String value = row[1].getString();
+                        switch (row[0].getString()) {
+                        case "DATABASE_TO_UPPER":
+                            databaseToUpper = Boolean.valueOf(value);
+                            break;
+                        case "DATABASE_TO_LOWER":
+                            databaseToLower = Boolean.valueOf(value);
+                            break;
+                        case "CASE_INSENSITIVE_IDENTIFIERS":
+                            caseInsensitiveIdentifiers = Boolean.valueOf(value);
+                        }
+                    }
+                }
+            }
+            if (clientVersion < Constants.TCP_PROTOCOL_VERSION_18) {
+                caseInsensitiveIdentifiers = !databaseToUpper;
+            }
+            staticSettings = settings = new StaticSettings(databaseToUpper, databaseToLower,
+                    caseInsensitiveIdentifiers);
+        }
+        return settings;
+    }
+
+    @Override
+    public DynamicSettings getDynamicSettings() {
+        DynamicSettings settings = dynamicSettings;
+        if (settings == null) {
+            String modeName = ModeEnum.REGULAR.name();
+            TimeZoneProvider timeZone = DateTimeUtils.getTimeZone();
+            try (CommandInterface command = prepareCommand(
+                    "SELECT NAME, `VALUE` FROM INFORMATION_SCHEMA.SETTINGS WHERE NAME IN (?, ?)",
+                    Integer.MAX_VALUE)) {
+                ArrayList<? extends ParameterInterface> parameters = command.getParameters();
+                parameters.get(0).setValue(ValueString.get("MODE"), false);
+                parameters.get(1).setValue(ValueString.get("TIME ZONE"), false);
+                try (ResultInterface result = command.executeQuery(Integer.MAX_VALUE, false)) {
+                    while (result.next()) {
+                        Value[] row = result.currentRow();
+                        String value = row[1].getString();
+                        switch (row[0].getString()) {
+                        case "MODE":
+                            modeName = value;
+                            break;
+                        case "TIME ZONE":
+                            timeZone = TimeZoneProvider.ofId(value);
+                        }
+                    }
+                }
+            }
+            Mode mode = Mode.getInstance(modeName);
+            if (mode == null) {
+                mode = Mode.getRegular();
+            }
+            dynamicSettings = settings = new DynamicSettings(mode, timeZone);
+        }
+        return settings;
+    }
+
+    @Override
+    public ValueTimestampTimeZone currentTimestamp() {
+        return DateTimeUtils.currentTimestamp(getDynamicSettings().timeZone);
+    }
+
+    @Override
+    public TimeZoneProvider currentTimeZone() {
+        return getDynamicSettings().timeZone;
+    }
+
+    @Override
+    public Mode getMode() {
+        return getDynamicSettings().mode;
+    }
+
 }
