@@ -1,6 +1,6 @@
 /*
- * Copyright 2004-2014 H2 Group. Multiple-Licensed under the MPL 2.0,
- * and the EPL 1.0 (http://h2database.com/html/license.html).
+ * Copyright 2004-2020 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * and the EPL 1.0 (https://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
 package org.h2.test;
@@ -21,7 +21,6 @@ import java.lang.reflect.Proxy;
 import java.nio.channels.FileChannel;
 import java.nio.channels.FileLock;
 import java.sql.Connection;
-import java.sql.DriverManager;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
@@ -30,17 +29,23 @@ import java.sql.Statement;
 import java.sql.Types;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.Objects;
 import java.util.SimpleTimeZone;
 import java.util.concurrent.TimeUnit;
+
+import org.h2.engine.SysProperties;
 import org.h2.jdbc.JdbcConnection;
 import org.h2.message.DbException;
 import org.h2.store.fs.FilePath;
 import org.h2.store.fs.FileUtils;
 import org.h2.test.utils.ProxyCodeGenerator;
 import org.h2.test.utils.ResultVerifier;
-import org.h2.tools.DeleteDbFiles;
+import org.h2.util.StringUtils;
+import org.h2.util.Utils;
 
 /**
  * The base class for all tests.
@@ -68,11 +73,6 @@ public abstract class TestBase {
     private static String baseDir = getTestDir("");
 
     /**
-     * The last time something was printed.
-     */
-    private static long lastPrint;
-
-    /**
      * The test configuration.
      */
     public TestAll config;
@@ -82,7 +82,9 @@ public abstract class TestBase {
      */
     protected long start;
 
-    private final LinkedList<byte[]> memory = new LinkedList<byte[]>();
+    private final LinkedList<byte[]> memory = new LinkedList<>();
+
+    private static final DateTimeFormatter timeFormat = DateTimeFormatter.ofPattern("HH:mm:ss");
 
     /**
      * Get the test directory for this test.
@@ -92,13 +94,6 @@ public abstract class TestBase {
      */
     public static String getTestDir(String name) {
         return BASE_TEST_DIR + "/test" + name;
-    }
-
-    /**
-     * Start the TCP server if enabled in the configuration.
-     */
-    protected void startServerIfRequired() throws SQLException {
-        config.beforeTest();
     }
 
     /**
@@ -125,16 +120,6 @@ public abstract class TestBase {
     }
 
     /**
-     * Run a test case using the given seed value.
-     *
-     * @param seed the random seed value
-     */
-    @SuppressWarnings("unused")
-    public void testCase(int seed) throws Exception {
-        // do nothing
-    }
-
-    /**
      * This method is initializes the test, runs the test by calling the test()
      * method, and prints status information. It also catches exceptions so that
      * the tests can continue.
@@ -147,12 +132,17 @@ public abstract class TestBase {
         }
         try {
             init(conf);
+            if (!isEnabled()) {
+                conf.executedTests.putIfAbsent(getClass(), false);
+                return;
+            }
+            conf.executedTests.put(getClass(), true);
             start = System.nanoTime();
             test();
             println("");
         } catch (Throwable e) {
             println("FAIL " + e.toString());
-            logError("FAIL " + e.toString(), e);
+            logError("FAIL ("+conf+") " + e.toString(), e);
             if (config.stopOnError) {
                 throw new AssertionError("ERROR");
             }
@@ -161,31 +151,6 @@ public abstract class TestBase {
                 throw (OutOfMemoryError) e;
             }
         }
-    }
-
-    /**
-     * Open a database connection in admin mode. The default user name and
-     * password is used.
-     *
-     * @param name the database name
-     * @return the connection
-     */
-    public Connection getConnection(String name) throws SQLException {
-        return getConnectionInternal(getURL(name, true), getUser(),
-                getPassword());
-    }
-
-    /**
-     * Open a database connection.
-     *
-     * @param name the database name
-     * @param user the user name to use
-     * @param password the password to use
-     * @return the connection
-     */
-    public Connection getConnection(String name, String user, String password)
-            throws SQLException {
-        return getConnectionInternal(getURL(name, false), user, password);
     }
 
     /**
@@ -239,123 +204,7 @@ public abstract class TestBase {
         return dir;
     }
 
-    /**
-     * Get the database URL for the given database name using the current
-     * configuration options.
-     *
-     * @param name the database name
-     * @param admin true if the current user is an admin
-     * @return the database URL
-     */
-    protected String getURL(String name, boolean admin) {
-        String url;
-        if (name.startsWith("jdbc:")) {
-            if (config.mvStore) {
-                name = addOption(name, "MV_STORE", "true");
-                // name = addOption(name, "MVCC", "true");
-            }
-            return name;
-        }
-        if (admin) {
-            // name = addOption(name, "RETENTION_TIME", "10");
-            // name = addOption(name, "WRITE_DELAY", "10");
-        }
-        int idx = name.indexOf(':');
-        if (idx == -1 && config.memory) {
-            name = "mem:" + name;
-        } else {
-            if (idx < 0 || idx > 10) {
-                // index > 10 if in options
-                name = getBaseDir() + "/" + name;
-            }
-        }
-        if (config.networked) {
-            if (config.ssl) {
-                url = "ssl://localhost:9192/" + name;
-            } else {
-                url = "tcp://localhost:9192/" + name;
-            }
-        } else if (config.googleAppEngine) {
-            url = "gae://" + name +
-                    ";FILE_LOCK=NO;AUTO_SERVER=FALSE;DB_CLOSE_ON_EXIT=FALSE";
-        } else {
-            url = name;
-        }
-        if (config.mvStore) {
-            url = addOption(url, "MV_STORE", "true");
-            // url = addOption(url, "MVCC", "true");
-        } else {
-            url = addOption(url, "MV_STORE", "false");
-        }
-        if (!config.memory) {
-            if (config.smallLog && admin) {
-                url = addOption(url, "MAX_LOG_SIZE", "1");
-            }
-        }
-        if (config.traceSystemOut) {
-            url = addOption(url, "TRACE_LEVEL_SYSTEM_OUT", "2");
-        }
-        if (config.traceLevelFile > 0 && admin) {
-            url = addOption(url, "TRACE_LEVEL_FILE", "" + config.traceLevelFile);
-            url = addOption(url, "TRACE_MAX_FILE_SIZE", "8");
-        }
-        url = addOption(url, "LOG", "1");
-        if (config.throttleDefault > 0) {
-            url = addOption(url, "THROTTLE", "" + config.throttleDefault);
-        } else if (config.throttle > 0) {
-            url = addOption(url, "THROTTLE", "" + config.throttle);
-        }
-        url = addOption(url, "LOCK_TIMEOUT", "" + config.lockTimeout);
-        if (config.diskUndo && admin) {
-            url = addOption(url, "MAX_MEMORY_UNDO", "3");
-        }
-        if (config.big && admin) {
-            // force operations to disk
-            url = addOption(url, "MAX_OPERATION_MEMORY", "1");
-        }
-        if (config.mvcc) {
-            url = addOption(url, "MVCC", "TRUE");
-        }
-        if (config.multiThreaded) {
-            url = addOption(url, "MULTI_THREADED", "TRUE");
-        }
-        if (config.lazy) {
-            url = addOption(url, "LAZY_QUERY_EXECUTION", "1");
-        }
-        if (config.cacheType != null && admin) {
-            url = addOption(url, "CACHE_TYPE", config.cacheType);
-        }
-        if (config.diskResult && admin) {
-            url = addOption(url, "MAX_MEMORY_ROWS", "100");
-            url = addOption(url, "CACHE_SIZE", "0");
-        }
-        if (config.cipher != null) {
-            url = addOption(url, "CIPHER", config.cipher);
-        }
-        if (config.defrag) {
-            url = addOption(url, "DEFRAG_ALWAYS", "TRUE");
-        }
-        if (config.collation != null) {
-            url = addOption(url, "COLLATION", config.collation);
-        }
-        return "jdbc:h2:" + url;
-    }
 
-    private static String addOption(String url, String option, String value) {
-        if (url.indexOf(";" + option + "=") < 0) {
-            url += ";" + option + "=" + value;
-        }
-        return url;
-    }
-
-    private static Connection getConnectionInternal(String url, String user,
-            String password) throws SQLException {
-        org.h2.Driver.load();
-        // url += ";DEFAULT_TABLE_TYPE=1";
-        // Class.forName("org.hsqldb.jdbcDriver");
-        // return DriverManager.getConnection("jdbc:hsqldb:" + name, "sa", "");
-        return DriverManager.getConnection(url, user, password);
-    }
 
     /**
      * Get the small or the big value depending on the configuration.
@@ -388,7 +237,6 @@ public abstract class TestBase {
      */
     public void trace(String s) {
         if (config.traceTest) {
-            lastPrint = 0;
             println(s);
         }
     }
@@ -411,7 +259,9 @@ public abstract class TestBase {
      */
     public void printTimeMemory(String s, long time) {
         if (config.big) {
-            println(getMemoryUsed() + " MB: " + s + " ms: " + time);
+            Runtime rt = Runtime.getRuntime();
+            long memNow = rt.totalMemory() - rt.freeMemory();
+            println(memNow / 1024 / 1024 + " MB: " + s + " ms: " + time);
         }
     }
 
@@ -459,7 +309,6 @@ public abstract class TestBase {
      * @throws AssertionError always throws an AssertionError
      */
     protected void fail(String string) {
-        lastPrint = 0;
         if (string.length() > 100) {
             // avoid long strings with special characters, because they are slow
             // to display in Eclipse
@@ -483,6 +332,17 @@ public abstract class TestBase {
      * Log an error message.
      *
      * @param s the message
+     */
+    public static void logErrorMessage(String s) {
+        System.out.flush();
+        System.err.println("ERROR: " + s + "------------------------------");
+        logThrowable(s, null);
+    }
+
+    /**
+     * Log an error message.
+     *
+     * @param s the message
      * @param e the exception
      */
     public static void logError(String s, Throwable e) {
@@ -493,6 +353,10 @@ public abstract class TestBase {
         System.err.println("ERROR: " + s + " " + e.toString()
                 + " ------------------------------");
         e.printStackTrace();
+        logThrowable(null, e);
+    }
+
+    private static void logThrowable(String s, Throwable e) {
         // synchronize on this class, because file locks are only visible to
         // other JVMs
         synchronized (TestBase.class) {
@@ -509,9 +373,14 @@ public abstract class TestBase {
                 }
                 // append
                 FileWriter fw = new FileWriter("error.txt", true);
-                PrintWriter pw = new PrintWriter(fw);
-                e.printStackTrace(pw);
-                pw.close();
+                if (s != null) {
+                    fw.write(s);
+                }
+                if (e != null) {
+                    PrintWriter pw = new PrintWriter(fw);
+                    e.printStackTrace(pw);
+                    pw.close();
+                }
                 fw.close();
                 // unlock
                 lock.release();
@@ -529,11 +398,8 @@ public abstract class TestBase {
      */
     public void println(String s) {
         long now = System.nanoTime();
-        if (now > lastPrint + TimeUnit.SECONDS.toNanos(1)) {
-            lastPrint = now;
-            long time = TimeUnit.NANOSECONDS.toMillis(now - start);
-            printlnWithTime(time, getClass().getName() + " " + s);
-        }
+        long time = TimeUnit.NANOSECONDS.toMillis(now - start);
+        printlnWithTime(time, getClass().getName() + ' ' + s);
     }
 
     /**
@@ -543,10 +409,9 @@ public abstract class TestBase {
      * @param s the message
      */
     static synchronized void printlnWithTime(long millis, String s) {
-        SimpleDateFormat dateFormat = new SimpleDateFormat("HH:mm:ss");
-        s = dateFormat.format(new java.util.Date()) + " " +
-                formatTime(millis) + " " + s;
-        System.out.println(s);
+        StringBuilder builder = new StringBuilder(s.length() + 19);
+        timeFormat.formatTo(LocalTime.now(), builder);
+        System.out.println(formatTime(builder.append(' '), millis).append(' ').append(s).toString());
     }
 
     /**
@@ -555,48 +420,39 @@ public abstract class TestBase {
      * @param s the message
      */
     protected void printTime(String s) {
-        SimpleDateFormat dateFormat = new SimpleDateFormat("HH:mm:ss");
-        println(dateFormat.format(new java.util.Date()) + " " + s);
+        StringBuilder builder = new StringBuilder(s.length() + 9);
+        timeFormat.formatTo(LocalTime.now(), builder);
+        println(builder.append(' ').append(s).toString());
     }
 
     /**
-     * Format the time in the format hh:mm:ss.1234 where 1234 is milliseconds.
+     * Format the time in the format mm:ss.123 or hh:mm:ss.123 where 123 is
+     * milliseconds.
      *
-     * @param millis the time in milliseconds
-     * @return the formatted time
+     * @param builder the string builder to append to
+     * @param millis the time in milliseconds, non-negative
+     * @return the specified string builder
      */
-    static String formatTime(long millis) {
-        String s = new java.sql.Time(
-                java.sql.Time.valueOf("0:0:0").getTime() + millis).toString() +
-                "." + ("" + (1000 + (millis % 1000))).substring(1);
-        if (s.startsWith("00:")) {
-            s = s.substring(3);
+    static StringBuilder formatTime(StringBuilder builder, long millis) {
+        int s = (int) (millis / 1_000);
+        int m = s / 60;
+        s %= 60;
+        int h = m / 60;
+        if (h != 0) {
+            builder.append(h).append(':');
+            m %= 60;
         }
-        return s;
+        StringUtils.appendTwoDigits(builder, m).append(':');
+        StringUtils.appendTwoDigits(builder, s).append('.');
+        StringUtils.appendZeroPadded(builder, 3, millis % 1_000);
+        return builder;
     }
 
     /**
-     * Delete all database files for this database.
-     *
-     * @param name the database name
+     * @return whether this test is enabled in the current configuration
      */
-    protected void deleteDb(String name) {
-        deleteDb(getBaseDir(), name);
-    }
-
-    /**
-     * Delete all database files for a database.
-     *
-     * @param dir the directory where the database files are located
-     * @param name the database name
-     */
-    protected void deleteDb(String dir, String name) {
-        DeleteDbFiles.execute(dir, name, true);
-        // ArrayList<String> list;
-        // list = FileLister.getDatabaseFiles(baseDir, name, true);
-        // if (list.size() >  0) {
-        //    System.out.println("Not deleted: " + list);
-        // }
+    public boolean isEnabled() {
+        return true;
     }
 
     /**
@@ -662,11 +518,14 @@ public abstract class TestBase {
      * @throws AssertionError if the values are not equal
      */
     public void assertEquals(java.util.Date expected, java.util.Date actual) {
-        if (expected != actual && !expected.equals(actual)) {
+        if (!Objects.equals(expected, actual)) {
             DateFormat df = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss.SSS");
             SimpleTimeZone gmt = new SimpleTimeZone(0, "Z");
             df.setTimeZone(gmt);
-            fail("Expected: " + df.format(expected) + " actual: " + df.format(actual));
+            fail("Expected: " +
+                    (expected != null ? df.format(expected) : "null") +
+                    " actual: " +
+                    (actual != null ? df.format(actual) : "null"));
         }
     }
 
@@ -706,11 +565,7 @@ public abstract class TestBase {
      * @throws AssertionError if the values are not equal
      */
     public void assertEquals(Object expected, Object actual) {
-        if (expected == null || actual == null) {
-            assertTrue(expected == actual);
-            return;
-        }
-        if (!expected.equals(actual)) {
+        if (!Objects.equals(expected, actual)) {
             fail(" expected: " + expected + " actual: " + actual);
         }
     }
@@ -844,6 +699,19 @@ public abstract class TestBase {
     }
 
     /**
+     * Check if two objects are the same, and if not throw an exception.
+     *
+     * @param expected the expected value
+     * @param actual the actual value
+     * @throws AssertionError if the objects are not the same
+     */
+    public void assertSame(Object expected, Object actual) {
+        if (expected != actual) {
+            fail(" expected: " + expected + " != actual: " + actual);
+        }
+    }
+
+    /**
      * Check if the first value is larger or equal than the second value, and if
      * not throw an exception.
      *
@@ -951,7 +819,9 @@ public abstract class TestBase {
      * @throws AssertionError if the condition is false
      */
     public void assertTrue(boolean condition) {
-        assertTrue("Expected: true got: false", condition);
+        if (!condition) {
+            fail("Expected: true got: false");
+        }
     }
 
     /**
@@ -967,13 +837,38 @@ public abstract class TestBase {
     }
 
     /**
+     * Check that the passed object is not null.
+     *
+     * @param obj the object
+     * @throws AssertionError if the condition is false
+     */
+    public void assertNotNull(Object obj) {
+        if (obj == null) {
+            fail("Expected: not null got: null");
+        }
+    }
+
+    /**
+     * Check that the passed object is not null.
+     *
+     * @param message the message to print if the condition is false
+     * @param obj the object
+     * @throws AssertionError if the condition is false
+     */
+    public void assertNotNull(String message, Object obj) {
+        if (obj == null) {
+            fail(message);
+        }
+    }
+
+    /**
      * Check that the passed boolean is true.
      *
      * @param message the message to print if the condition is false
      * @param condition the condition
      * @throws AssertionError if the condition is false
      */
-    protected void assertTrue(String message, boolean condition) {
+    public void assertTrue(String message, boolean condition) {
         if (!condition) {
             fail(message);
         }
@@ -986,7 +881,9 @@ public abstract class TestBase {
      * @throws AssertionError if the condition is true
      */
     protected void assertFalse(boolean value) {
-        assertFalse("Expected: false got: true", value);
+        if (value) {
+            fail("Expected: false got: true");
+        }
     }
 
     /**
@@ -1075,7 +972,7 @@ public abstract class TestBase {
      *
      * @param stat the statement
      */
-    protected void execute(PreparedStatement stat) throws SQLException {
+    public void execute(PreparedStatement stat) throws SQLException {
         execute(stat, null);
     }
 
@@ -1142,7 +1039,8 @@ public abstract class TestBase {
                     break;
                 case Types.SMALLINT:
                     assertEquals("SMALLINT", typeName);
-                    assertEquals("java.lang.Short", className);
+                    assertEquals(SysProperties.OLD_RESULT_SET_GET_OBJECT ? "java.lang.Short" : "java.lang.Integer",
+                            className);
                     break;
                 case Types.TIMESTAMP:
                     assertEquals("TIMESTAMP", typeName);
@@ -1363,7 +1261,7 @@ public abstract class TestBase {
     }
 
     /**
-     * Check if two databases contain the same met data.
+     * Check if two databases contain the same meta data.
      *
      * @param stat1 the connection to the first database
      * @param stat2 the connection to the second database
@@ -1372,7 +1270,7 @@ public abstract class TestBase {
     protected void assertEqualDatabases(Statement stat1, Statement stat2)
             throws SQLException {
         ResultSet rs = stat1.executeQuery(
-                "select value from information_schema.settings " +
+                "select `value` from information_schema.settings " +
                 "where name='ANALYZE_AUTO'");
         int analyzeAuto = rs.next() ? rs.getInt(1) : 0;
         if (analyzeAuto > 0) {
@@ -1381,8 +1279,8 @@ public abstract class TestBase {
         }
         ResultSet rs1 = stat1.executeQuery("SCRIPT simple NOPASSWORDS");
         ResultSet rs2 = stat2.executeQuery("SCRIPT simple NOPASSWORDS");
-        ArrayList<String> list1 = new ArrayList<String>();
-        ArrayList<String> list2 = new ArrayList<String>();
+        ArrayList<String> list1 = new ArrayList<>();
+        ArrayList<String> list2 = new ArrayList<>();
         while (rs1.next()) {
             String s1 = rs1.getString(1);
             s1 = removeRowCount(s1);
@@ -1423,7 +1321,7 @@ public abstract class TestBase {
         try {
             return (TestBase) new SecurityManager() {
                 Class<?> clazz = getClassContext()[2];
-            }.clazz.newInstance();
+            }.clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -1435,7 +1333,17 @@ public abstract class TestBase {
      * @return the classpath list
      */
     protected String getClassPath() {
-        return "bin" + File.pathSeparator + "temp" + File.pathSeparator + ".";
+        return System.getProperty("java.class.path");
+    }
+
+    /**
+     * Get the path to a java executable of the current process
+     *
+     * @return the path to java
+     */
+    public static String getJVM() {
+        return System.getProperty("java.home") + File.separatorChar + "bin"
+                + File.separator + "java";
     }
 
     /**
@@ -1444,20 +1352,19 @@ public abstract class TestBase {
      * @param remainingKB the number of kilobytes that are not referenced
      */
     protected void eatMemory(int remainingKB) {
-        byte[] reserve = new byte[remainingKB * 1024];
-        // first, eat memory in 16 KB blocks, then eat in 16 byte blocks
-        for (int size = 16 * 1024; size > 0; size /= 1024) {
-            while (true) {
-                try {
-                    byte[] block = new byte[16 * 1024];
-                    memory.add(block);
-                } catch (OutOfMemoryError e) {
-                    break;
-                }
+        int memoryFreeKB;
+        try {
+            while ((memoryFreeKB = Utils.getMemoryFree()) > remainingKB) {
+                byte[] block = new byte[Math.max((memoryFreeKB - remainingKB) / 16, 16) * 1024];
+                memory.add(block);
             }
+        } catch (OutOfMemoryError e) {
+            if (remainingKB >= 3000) { // OOM is not expected
+                memory.clear();
+                throw e;
+            }
+            // OOM can be ignored because it's tolerable (separate process?)
         }
-        // silly code - makes sure there are no warnings
-        reserve[0] = reserve[1];
     }
 
     /**
@@ -1465,6 +1372,12 @@ public abstract class TestBase {
      */
     protected void freeMemory() {
         memory.clear();
+        for (int i = 0; i < 5; i++) {
+            System.gc();
+            try {
+                Thread.sleep(20);
+            } catch (InterruptedException ignore) {/**/}
+        }
     }
 
     /**
@@ -1477,33 +1390,25 @@ public abstract class TestBase {
      */
     protected <T> T assertThrows(final Class<?> expectedExceptionClass,
             final T obj) {
-        return assertThrows(new ResultVerifier() {
-            @Override
-            public boolean verify(Object returnValue, Throwable t, Method m,
-                    Object... args) {
-                if (t == null) {
-                    throw new AssertionError("Expected an exception of type " +
-                            expectedExceptionClass.getSimpleName() +
-                            " to be thrown, but the method returned " +
-                            returnValue +
-                            " for " + ProxyCodeGenerator.formatMethodCall(m, args));
-                }
-                if (!expectedExceptionClass.isAssignableFrom(t.getClass())) {
-                    AssertionError ae = new AssertionError(
-                            "Expected an exception of type\n" +
-                                    expectedExceptionClass.getSimpleName() +
-                                    " to be thrown, but the method under test " +
-                                    "threw an exception of type\n" +
-                                    t.getClass().getSimpleName() +
-                                    " (see in the 'Caused by' for the exception " +
-                                    "that was thrown) " +
-                                    " for " + ProxyCodeGenerator.
-                                    formatMethodCall(m, args));
-                    ae.initCause(t);
-                    throw ae;
-                }
-                return false;
+        return assertThrows((returnValue, t, m, args) -> {
+            if (t == null) {
+                throw new AssertionError("Expected an exception of type " +
+                        expectedExceptionClass.getSimpleName() +
+                        " to be thrown, but the method returned " +
+                        returnValue +
+                        " for " + ProxyCodeGenerator.formatMethodCall(m, args));
             }
+            if (!expectedExceptionClass.isAssignableFrom(t.getClass())) {
+                AssertionError ae = new AssertionError("Expected an exception of type\n" +
+                        expectedExceptionClass.getSimpleName() +
+                        " to be thrown, but the method under test threw an exception of type\n" +
+                        t.getClass().getSimpleName() +
+                        " (see in the 'Caused by' for the exception that was thrown) for " +
+                        ProxyCodeGenerator.formatMethodCall(m, args));
+                ae.initCause(t);
+                throw ae;
+            }
+            return false;
         }, obj);
     }
 
@@ -1515,31 +1420,24 @@ public abstract class TestBase {
      * @param obj the object to wrap
      * @return a proxy for the object
      */
-    protected <T> T assertThrows(final int expectedErrorCode, final T obj) {
-        return assertThrows(new ResultVerifier() {
-            @Override
-            public boolean verify(Object returnValue, Throwable t, Method m,
-                    Object... args) {
-                int errorCode;
-                if (t instanceof DbException) {
-                    errorCode = ((DbException) t).getErrorCode();
-                } else if (t instanceof SQLException) {
-                    errorCode = ((SQLException) t).getErrorCode();
-                } else {
-                    errorCode = 0;
-                }
-                if (errorCode != expectedErrorCode) {
-                    AssertionError ae = new AssertionError(
-                            "Expected an SQLException or DbException with error code "
-                                    + expectedErrorCode
-                                    + ", but got a " + (t == null ? "null" :
-                                            t.getClass().getName() + " exception "
-                                    + " with error code " + errorCode));
-                    ae.initCause(t);
-                    throw ae;
-                }
-                return false;
+    protected <T> T assertThrows(int expectedErrorCode, T obj) {
+        return assertThrows((returnValue, t, m, args) -> {
+            int errorCode;
+            if (t instanceof DbException) {
+                errorCode = ((DbException) t).getErrorCode();
+            } else if (t instanceof SQLException) {
+                errorCode = ((SQLException) t).getErrorCode();
+            } else {
+                errorCode = 0;
             }
+            if (errorCode != expectedErrorCode) {
+                AssertionError ae = new AssertionError("Expected an SQLException or DbException with error code "
+                        + expectedErrorCode + ", but got a " + (t == null ? "null"
+                                : t.getClass().getName() + " exception " + " with error code " + errorCode));
+                ae.initCause(t);
+                throw ae;
+            }
+            return false;
         }, obj);
     }
 
@@ -1633,7 +1531,6 @@ public abstract class TestBase {
         }
     }
 
-
     /**
      * Construct a stream of 20 KB that fails while reading with the provided
      * exception.
@@ -1668,8 +1565,12 @@ public abstract class TestBase {
         throw (E) e;
     }
 
-    protected String getTestName() {
+    /**
+     * Get the name of the test.
+     *
+     * @return the name of the test class
+     */
+    public String getTestName() {
         return getClass().getSimpleName();
     }
-
 }
